<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/nelly"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E81607"
        android:contentDescription="@string/rapper_nelly_looking_hot"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nelly" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reset_button"
        android:textSize="24sp"
        app:backgroundTint="#EC0B0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converter"
        tools:text="Reset" />

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_header"
        android:textColor="#EC0B0B"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_button"
        android:textSize="24sp"
        app:backgroundTint="#EC0B0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <EditText
        android:id="@+id/fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFEFE"
        android:clickable="false"
        android:contentDescription="@string/shows_fahrenheit_temperature"
        android:hint="@string/enter_fahrenheit_temp"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/nelly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nelly"
        app:layout_constraintVertical_bias="0.484"
        tools:ignore="ContentDescription,TextFields"
        android:autofillHints=""
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/celsius"
        android:layout_width="318dp"
        android:layout_height="30dp"
        android:background="#FFFEFE"
        android:clickable="false"
        android:hint="@string/enter_celsius_temperature"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        android:inputType="numberSigned|numberDecimal"
        android:autofillHints=""
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>